Fixed game image on mobile

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -370,7 +370,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
   width: 200px;
 }
 .character-delete-img-game {
-  width: 400px;
+  width: 350px;
 }
 .index-button {
   float: right;
